chore: update to Minecraft `26.2`
This update is larger than usual because Minecraft `26.2` introduced
several technical changes, with one of the biggest being the removal of
mappings and changed class names.